Fixed text wrap bug on long texts with no spaces and changed UI for user messages sent

--- a/src/styles/messages.module.css
+++ b/src/styles/messages.module.css
@@ -165,14 +165,15 @@
   padding-top:15px;
 }
 .conversationHeader i{
-  color:#3d3d3d;
-  width:40px;
-  height:40px;
+  color:#666056;
+  width:35px;
+  height:35px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 20px;
   cursor: pointer;
+  font-size:25px;
 }
 .conversationHeader i:hover{
   background-color: rgba(0,0,0,0.05);
@@ -207,6 +208,8 @@
   overflow-y:auto;
   display: flex;
   flex-direction: column;
+  position: relative;
+  text-wrap:wrap;
 }
 .messages::-webkit-scrollbar{
   width: 5px;
@@ -263,6 +266,7 @@
   width: 100%;
   height: 30px;
   padding: 5px 20px;
+  padding-right: 90px;;
   border-radius: 30px;
   background-color: var(--background-light);
   outline: none;
@@ -336,12 +340,16 @@
 .receiverMessage {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-end;
   column-gap: 10px;
   border-radius: 20px;
   color: white;
   font-size: 18px;
   max-width: 45%;
+  word-wrap: break-word;
+  word-break: break-word; 
+  overflow-wrap: break-word; 
+  white-space: normal; 
 }
 
 .senderMessage {
@@ -353,17 +361,20 @@
 }
 
 .senderMessage p {
+  max-width: 100%;
   background-color: var(--accent-color);
   padding: 7px 12px;
   border-radius: 20px;
-  box-shadow: 0px 4px 4px rgba(0,0,0,0.1);
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+  text-wrap: wrap;
 }
 
 .receiverMessage p {
+  max-width:100%;
   background-color: #62BDFF ;
   padding: 7px 12px;
   border-radius: 20px;
-  box-shadow: 0px 8px 8px rgba(0,0,0,0.1);
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
 
 }
 
@@ -380,6 +391,10 @@
   position: relative;
   margin-left:46px;
 }
+.senderMarginedTextContainer{
+  position: relative;
+  margin-right: 46px;
+}
 .userMessageSentUsername{
   color:var(--text-color);
 }
@@ -387,13 +402,18 @@
 .textContainer{
   position: relative;
 }
-.receiverUsername{
+.receiverUsername, .senderUsername{
   position: absolute;
-  color:rgba(0, 0, 0, 0.4);
+  color:rgba(0, 0, 0, 0.3);
   font-size: 14px;
   bottom:100%;
-  left:10px;
   text-wrap: nowrap;
+}
+.senderUsername{
+  right:5px;
+}
+.receiverUsername{
+  left:5px
 }
 .messageDefaultPage{
   flex: 1;
